frame/support/test/tests/construct_runtime_ui/invalid_where_param.stderr
error: expected one of: `Block`, `NodeBlock`, `UncheckedExtrinsic`
 --> $DIR/invalid_where_param.rs:7:3
  |
7 |         TypeX = Block,
  |         ^^^^^
