frame/support/test/tests/construct_runtime_ui/invalid_where_param.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		Block = Block,
		NodeBlock = Block,
		TypeX = Block,
		UncheckedExtrinsic = UncheckedExtrinsic,
	{}
}

fn main() {}
